examples/errors/expected/1005-errors-try-rejections.stderr
error: `try` is only valid inside a failable function (a return type with `!` or `!Named`)
  --> examples/errors/1005-errors-try-rejections.sx:20:5
   |
20 |     try ga();                  // error: `try` outside a failable function
   |     ^^^^^^^^

error: `try` requires a failable expression; operand has type 'i32'
  --> examples/errors/1005-errors-try-rejections.sx:26:5
   |
26 |     try plain();               // error: operand has type i32 (not failable)
   |     ^^^^^^^^^^^

error: error tag 'error.Yb' is not in caller's error set 'A'
  --> examples/errors/1005-errors-try-rejections.sx:32:5
   |
32 |     try gb();                  // error: Yb not in caller's error set A
   |     ^^^^^^^^
